--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.8'
 
 services:
   server:
-    container_name: cm-server
-    hostname: cm-server
+    container_name: enig-server
+    hostname: enig-server
     restart: unless-stopped
     build:
       context: .
@@ -15,14 +15,14 @@ services:
     env_file:
       - ./.env
     networks:
-      - cm-internal-network
-      - cm-external-network
+      - enig-internal-network
+      - enig-external-network
     ports:
       - ${HTTP_SERVER_LISTEN_PORT}:${HTTP_SERVER_LISTEN_PORT}
 
   web:
-    container_name: cm-web
-    hostname: cm-web
+    container_name: enig-web
+    hostname: enig-web
     restart: unless-stopped
     depends_on:
       - server
@@ -30,17 +30,17 @@ services:
     volumes:
       - ${WEB_LOCAL_DIR}:/usr/share/nginx/html
     networks:
-      - cm-external-network
+      - enig-external-network
     ports:
       - ${WEB_PORT}:80
 
 networks:
-  cm-internal-network:
-    name: cm-internal-network
+  enig-internal-network:
+    name: enig-internal-network
     driver: bridge
     internal: true
 
-  cm-external-network:
-    name: cm-external-network
+  enig-external-network:
+    name: enig-external-network
     driver: bridge
     internal: false
